# test-technique-bouygues

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  baseline.ipynb  exploration.ipynb  mail.md  pyproject.toml  test-technique-gwatkinson.ipynb
