[tool.poetry]
name = "test-technique-bouygues-gwatkinson"
version = "0.1.0"
description = "Test technique pour un stage de Data Science à Bouygues Telecom en début 2022."
authors = ["Gabriel Watkinson"]

[tool.poetry.dependencies]
python = "3.9.9"
numpy = ">=1.17,<1.21"
pandas = "^1.3.5"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
plotly = "^5.5.0"
statsmodels = "^0.13.1"
sklearn = "^0.0"
xgboost = "^1.5.1"
munch = "^2.5.0"
category-encoders = "^2.3.0"
lightgbm = "^3.3.1"
shap = "^0.40.0"
sklearn-pandas = "^2.2.0"
pandas-profiling = "^3.1.0"
missingno = "^0.5.0"
imblearn = "^0.0"
explainerdashboard = "^0.3.7"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.4.6"
jupyterlab = "^3.2.5"
black = "^21.12b0"
pylint = "^2.12.2"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
